fix within dark mode switcher
really stupid mistake, but hey, now works right, right...

--- a/scss/components/buttons.scss
+++ b/scss/components/buttons.scss
@@ -16,7 +16,6 @@
 .button__about {
     margin-top: 1.75rem;
     width: 50vw;
-    color: $white;
 }
 
 .button__download {
@@ -28,7 +27,6 @@
 
 .button__more {
     width: 40vw;
-    color: $white;
 }
 
 .button__return {
