--- a/scss/includes/dark-mode-switch.scss
+++ b/scss/includes/dark-mode-switch.scss
@@ -7,6 +7,7 @@
 .toggle-button {
     display: inline-flex;
     background: var(--button);
+    color: var(--button-text);
     border: none;
     padding: 1em;
     transition: background 500ms ease-in-out, color 200ms ease;
@@ -19,6 +20,7 @@
 
 .toggle-button__icon {
     background: var(--switch-icon);
+    color: var(--button-text);
     width: 1em;
     height: 1em;
     margin: 0 0 0 0.5em;
